# SmartCalc

./: README.md  README_RUS.md
src/: calc.pro  main.cc  mainwindow.ui
src/models/: calculateModel.cc  calculateModel.h  depositModel.cc  depositModel.h  loanModel.cc  loanModel.h
src/presenters/: calculatePresenter.cc  calculatePresenter.h  depositPresenter.cc  depositPresenter.h  loanPresenter.cc  loanPresenter.h
src/qcustomplot/: qcustomplot.cc  qcustomplot.h
src/tests/: CMakeLists.txt  calculate_test.cc  deposit_test.cc  loan_test.cc
src/view/: view.cc  view.h
